[package]
name = "lnx"
version = "0.9.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"
description = "The adaptable deployment of the tantivy search engine. Standing on the shoulders of giants. Documentation available at https://docs.lnx.rs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "signal", "parking_lot", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
sled = { version = "0.34.7" }
clap = { version = "3", features = ["derive", "env"] }
zip = { version = "2.1.3", default-features = false, features = ["time", "deflate"] }

walkdir = "2.3.2"
thiserror = "1.0.30"
routerify = "2.2.0"
arc-swap = "1.4.0"
bincode = "1.3"
anyhow = "1"
num_cpus = "1.13"
bytes = "1"
serde_json = "1"
headers = "0.3.4"
parking_lot = "0.12.3"
rand = "0.8.5"

# allocator
mimalloc = { version = "*", default-features = false }

engine = { path = "../lnx-engine/engine" }
